= MagLev Change Log

  For more details see: http://bit.ly/d3C6S1

== Unreleased Changes

* Fix regression in sintra tests after Fix Trac 924

== Changes for 26076 2011-06-28
* Fix Trac 925
* Several bugfixes/enhancements in underlying GemStone 3.0 system

== Changes for 26063 2011-06-24
* Updated version from 0.8 to 0.9 due to recent improvements
  such as Rails 3.1 support
* Fix Trac924 failures in Sinatra tests  
* Fix failures in language/def_spec.rb 
* Updated RubySpec tags
* Bugfixes/enhancements in underlying GemStone 3.0 system

== Changes for 26024 2011-06-21
* Add Rails 3.1.0rc4 support.
* Fix Trac 922.
* Merge Fix of Trac 921.
* More fixes for Trac 913 . Fix some problems in printf.
* Fix a problem in rebuild of Hash.
* Bugfixes/enhancements in underlying GemStone 3.0 system

== Changes for 26011 2011-06-15
* Added $MaglevInBootstrap flag that is true during primitive install
  (bootstrap) and nil otherwise.  Used for debugging src/kernel code.
* Fix Trac 919, 920. Allow bridge chars in arg to remove_method. Fix
  remove_method, alias, undef to handle trailing suffix chars.
* Fix regressions in Trac 463, 484b.  Fix some deviations in language/def_spec.rb
* Bugfixes in underlying GemStone 3.0 system

== Changes for 25987 2011-06-14
* Update rakefiles to 0.9.2: use of Rake::DSL and fix rdoc task.
* Fixes to C extension implementation so sqlite3 C code will run.
* adjusts topaz printing for STACK and THREAD commands.
* Fix Trac 538, and test case Trac484b .
* Fix Trac 914, 915, 916, 917, 918.
* Bugfixes in underlying GemStone 3.0 system

== Changes for 25955 2011-06-09
* Updated to RubyGems 1.8.5
* Update pre-installed gems: rake => 0.9.2, bundler => 1.0.14
* Fix Trac 913
* More fixes to line numbering in backtraces, and how
    bootstrap code is shown in backtraces.
* Relaxed the 75% of total ram limit for SHMMAX to enable
  customers with 144 GB of ram to use more of their physical memory.

== Changes for 25943 2011-06-07