@@ -110,6 +110,7 @@ RubyUtilsTest.rb
 OptParseTest.rb
 ProcessTest.rb
 testFinalizer.rb
+lockTest.rb
 #
 # Tests which use Test::Unit  ; Test::Unit is upset by something later on
 Trac726.rb
